--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,42 +1,98 @@
 //====================================================================================================
-// .header {
-// 	background-color: #fff;
-// 	position: fixed;
-// 	width: 100%;
-// 	top: 0;
-// 	padding: 20px;
-// 	z-index: 50;
-// 	// .header__content
-// 	&__content {
-// 	}
-// 	// .header__menu
-// 	&__menu {
-// 	}
-// }
-// .menu {
-// 	// .menu__icon
-// 	&__icon {
-// 	}
-// 	// .menu__body
-// 	&__body {
-// 	}
-// 	// .menu__list
-// 	&__list {
-// 		display: flex;
-// 		li {
-// 			margin: 0px 15px 0px 0px;
-// 		}
-// 	}
-// 	// .menu__link
-// 	&__link {
-// 		color: #000;
-// 		&._active {
-// 			color: red;
-// 		}
-// 	}
-// }
-// .icon-menu {
-// }
+header {
+	padding: 29px 0 33px 0;
+}
+.header-top {
+	@include flexbox();
+	justify-content: space-between;
+	&__link {
+		font-family: 'AkzidenzGroteskBQCondensedBold';
+		text-transform: uppercase;
+		text-decoration: underline;
+		font-size: 15px;
+		color: #000;
+	}
+}
+.header-top-lang {
+	@include flexbox();
+	&__item {
+		display: block;
+		line-height: 19px;
+		color: #000;
+		font-size: 14px;
+		text-transform: uppercase;
+		font-family: Bebas;
+		letter-spacing: 1px;
+		padding: 0 4px;
+		margin: 0 10px 0 0;
+		&.active {
+			background-color: #000;
+			color: #fff;
+		}
+	}
+}
+.header-bottom {
+	@include flexbox();
+	align-items: center;
+	margin: -10px 0 0 0;
+	&__column {
+		flex: 0 0 33.333%;
+	}
+}
+.header-bottom-menu {
+	&--right{
+		.header-bottom-menu-list{
+			margin: 0;
+			@include flexbox();
+			justify-content: flex-end;
+			text-align: right;
+			li{
+				margin: 0 0 0 45px;
+				&:first-child{
+					margin: 0;
+				}
+				&:last-child{
+					margin: 0 0 0 45px;
+				}
+			}
+		}
+	}
+	&__link {
+		font-family: 'AkzidenzGroteskBQCondensedBold';
+		color: #000;
+		font-size: 15px;
+		text-transform: uppercase;
+		letter-spacing: 1.5px;
+	}
+}
+.header-bottom-menu-list {
+	@include flexbox();
+	li{
+		margin: 0 45px 0 0;
+		&:last-child{
+			margin: 0 0 0 0;
+			
+		}
+	}
+}
+.header-logo {
+	display: block;
+	text-align: center;
+	&__text {
+		display: block;
+		color: #000000;
+		font-family: Bebas;
+		text-transform: uppercase;
+		letter-spacing: 8px;
+		font-size: 10px;
+	}
+
+	&__image {
+		display: inline-block;
+		margin: 13px 0 22px 0 ;
+	}
+}
+
 
 //====================================================================================================
 
